@@ -1,5 +1,6 @@
 3.0.2
-   *
+   * Really tweak window theme - both the fallback and the
+     shell metacity/mutter theme
 
 3.0.1
    * Fix localization
